--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "vue": "^2.1.0",
+    "vue-cookie": "^1.1.3",
     "vue-qrcode": "0.0.2",
     "vue-resource": "^1.1.2",
     "vue-router": "^2.2.0"
