--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "vue": "^2.1.0",
     "vue-cookie": "^1.1.3",
+    "vue-core-image-upload": "^2.0.2",
     "vue-image-crop-upload": "^1.3.1",
-    "vue-qrcode": "0.0.2",
     "vue-resource": "^1.1.2",
     "vue-router": "^2.2.0"
   },
